[tool.poetry]
name = "gpt-migrate"
version = "0.1.0"
description = "Easily migrate your codebase from one framework or language to another."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"